# modern-cpp-lib-js

./: .gitmodules  CMakeLists.txt  README.md  build.sh  emscripten-docker.sh  package.json
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  jslib.cpp  post.js
test/browser/: index.html
test/node/: index.js  package.json
